chore: getLastTimestamp method fixed